--- a/src/utils/translations/pt-BR.json
+++ b/src/utils/translations/pt-BR.json
@@ -23,5 +23,6 @@
   "cw.contactMessage.name": "Nome",
   "cw.contactMessage.number": "Número",
   "cw.message.notsent": "🚨 Não foi possível enviar a mensagem. Verifique sua conexão. {{error}}",
-  "cw.message.edited": "Mensagem editada"
+  "cw.message.edited": "Mensagem editada",
+  "cw.message.deleted": "Mensagem Deletada"
 }
